--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
         <table>
             <tr>
                 <td>3350</td><td>Somrak Sathian</td>
+                <td><img src="IMG20211126153251.jpg"width="150" height="250"></td>
             </tr>
             <tr>
                 <td>2436</td><td>Peerapat Sangwong</td>
+                <td><img src="received_243352564792855.jpeg"width="150" height="250"></td>
             </tr>
         </table>
     </body>
